# robust-lsp

./: .gitignore  .gitmodules  Cargo.toml  README.md  Robust.Lsp.sln
.github/workflows/: build.yml  publish.yml  release.yml
Robust.Lsp/: Program.cs  Robust.Lsp.csproj
clients/code/: CHANGELOG.md  README.md  package-lock.json  package.json
clients/code/src/: extension.ts
scripts/: install.ps1
src/: backend.rs  log.rs  main.rs  utils.rs
src/completion/: mod.rs  yml.rs
src/goto/: mod.rs  yml.rs
src/hint/: mod.rs  yaml.rs
src/parse/: common.rs  csharp.rs  fluent.rs  index.rs  mod.rs  structs.rs  yaml.rs
src/parse/structs/: csharp.rs  fluent.rs  json.rs  mod.rs  yaml.rs
src/queries/: prototype_yml_field.scm
src/references/: csharp.rs  mod.rs
src/semantic/: fluent.rs
