[package]
name = "robust-lsp"
version = "0.10.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
fluent-syntax = { git = "https://github.com/Ertanic/fluent-rs", features = ["spans"], rev = "adae4a04e491846b5bd22b605c669812473395a4" }
futures = "0.3.31"
rayon = "1.10.0"
ropey = "1.6.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
stringcase = "0.3.0"
strsim = "0.11.1"
tokio = { version = "1.40.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
tree-sitter = "0.23.0"
tree-sitter-c-sharp = "0.23.0"
tree-sitter-yaml = "0.6.1"
walkdir = "2.5.0"
itertools = "0.13"

[profile.dev]
debug = 2
build-override.debug = 2
